status_page/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-page
  namespace: status-page
  labels:
    app: status-page
spec:
  selector:
    matchLabels:
      app: status-page
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: status-page
    spec:
      containers:
        - name: status-page
          image: louislam/uptime-kuma:latest
          imagePullPolicy: Always
          ports:
            - name: status-page
              protocol: TCP
              containerPort: 3001
          volumeMounts:
            - mountPath: /app/data
              name: status-page-data
      volumes:
        - name: status-page-data
          persistentVolumeClaim:
            claimName: status-page-pv-claim
