status_page/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: status-page
  namespace: status-page
  labels:
    app: status-page
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.arthurdanjou.fr`)
      kind: Rule
      services:
        - name: status-page
          port: 3001
  tls:
    store:
      name: default
